# doctown-v10

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  SUMMARIZER_SETUP.md  USAGE.md  build-local.sh  build.sh  embed_chunks.py  entrypoint.sh  generate.py  requirements.txt  rerank.py
crates/builder/: Cargo.toml
crates/doctown-builder/: Cargo.toml
crates/doctown-core/: Cargo.toml
crates/localdoc/: Cargo.toml
crates/sandbox/: Cargo.toml
doctown-harness/: Cargo.toml
doctown-harness/src/: main.rs
examples/: summarizer_example.rs
python/: pyproject.toml
python/documenter/: README.md  __init__.py  model.py  prompts.py  registry.py  requirements.txt  server.py  test_server.py
python/embedding/: README.md  client.py  model.py  requirements.txt  server.py
src/: chunker.rs  db.rs  docpack.rs  lib.rs  main.rs  python_bridge.rs
src/chunker/: mod.rs  splitter.rs  tests.rs
src/clusterer/: centroid.rs  kmeans.rs  mod.rs  similarity.rs  tests.rs  types.rs
src/embedder/: batcher.rs  client.rs  example.md  mod.rs  model.rs  tests.rs  types.rs
src/parser/: mod.rs  registry.rs  result.rs  tests.rs  unknown.rs
src/sandbox/: entry.rs  error.rs  mod.rs  tests.rs
src/security/: mod.rs  path.rs  path_tests.rs
src/summarizer/: client.rs  types.rs
