[package]
name = "doctown"
version = "10.0.0"
edition = "2021"
description = "v10"
license = "MIT"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
