[package]
name = "doctown-v10"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
zip = "2.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
thiserror = "2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
